--- a/Lab1/Views/Shared/_Layout.cshtml
+++ b/Lab1/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employees</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="CreateApi">Employee API</a>
+                        </li>
                         <partial name="_LoginPartial" />
                     </ul>
                 </div>
