Commit to continue work on another device

--- a/Lab1/Views/Home/Index.cshtml
+++ b/Lab1/Views/Home/Index.cshtml
@@ -1,8 +1,39 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Portal Pracodawcy";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container mt-5">
+    <div class="jumbotron">
+        <h1 class="display-4">Witamy w Portalu Pracodawcy!</h1>
+        <p class="lead">To kompleksowe narzędzie umożliwia efektywne zarządzanie procesem zatrudnienia.</p>
+        <hr class="my-4">
+        <p>Odkryj, jak możesz wzmocnić swój zespół i poprawić zarządzanie zasobami ludzkimi.</p>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Znajdź Talent</h5>
+                    <p class="card-text">Użyj naszej wyszukiwarki, aby szybko znaleźć kompetentnych pracowników.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Zarządzaj Zespołem</h5>
+                    <p class="card-text">Przeglądaj swoich pracowników i zarządzaj ich informacjami łatwo i skutecznie.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Oceń Wydajność</h5>
+                    <p class="card-text">Monitoruj i oceniaj wydajność pracowników, aby wspierać ich rozwój.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
