--- a/Lab1/Views/Employee/CreateApi.cshtml
+++ b/Lab1/Views/Employee/CreateApi.cshtml
@@ -1,10 +1,19 @@
-﻿@model Employee_App.Models.EmployeeModel
+﻿@model Employee_App.Models.Employee.EmployeeModel
 
 <h1>Wyszukaj pracownika</h1>
 
 <form id="employee-form">
     <div class="form-group m-2">
-        <label for="filter">Filter by name:</label>
+        <label for="category">Choose a category:</label>
+        <select id="category" class="form-control">
+            <option value="firstName">Imię</option>
+            <option value="lastName">Nazwisko</option>
+            <option value="Position">Stanowisko</option>
+            <option value="Department">Oddział</option>
+        </select>
+    </div>
+    <div class="form-group m-2">
+        <label for="filter">Filter by value:</label>
         <input type="text" id="filter" name="filter" class="form-control" />
     </div>
     <button type="button" class="btn btn-primary" onclick="fetchEmployees()">Fetch Employees</button>
@@ -15,8 +24,9 @@
 @section Scripts {
     <script>
         function fetchEmployees() {
+            var category = document.getElementById('category').value;
             var filter = document.getElementById('filter').value;
-            fetch(`/api/employees?filter=${filter}`)
+            fetch(`/api/employees?category=${category}&filter=${filter}`)
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
@@ -37,7 +47,7 @@
             var ul = document.createElement('ul');
             employees.forEach(function (employee) {
                 var li = document.createElement('li');
-                li.textContent = employee.firstName + " " + employee.lastName; // Dodaj odpowiednie właściwości modelu pracownika
+                li.textContent = employee.firstName + " " + employee.lastName; // Dostosuj wyświetlanie w zależności od kategorii
                 ul.appendChild(li);
             });
             container.appendChild(ul);
