--- a/Lab1/Views/Employee/Details.cshtml
+++ b/Lab1/Views/Employee/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee_App.Models.EmployeeModel
+﻿@model Employee_App.Models.Employee.EmployeeModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
