--- a/Lab1/Views/_ViewImports.cshtml
+++ b/Lab1/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using Lab1
-@using Lab1.Models
+﻿@using Employee_App
+@using Employee_App.Models
+@using Employee_App.Models.Employee
+@using Employee_App.Models.Employer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
