--- a/Lab1/Views/Employee/Delete.cshtml
+++ b/Lab1/Views/Employee/Delete.cshtml
@@ -1,7 +1,5 @@
 ﻿@model Employee_App.Models.Employee.EmployeeModel
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
 @{
 }
 <h2>Delete Employee</h2>
@@ -13,11 +11,11 @@
     <table class="table table-bordered">
         <tbody>
             <tr>
-                <th scope="row">First Name</th>
+                <th scope="row">Imię</th>
                 <td>@Html.DisplayFor(model => model.FirstName)</td>
             </tr>
             <tr>
-                <th scope="row">Last Name</th>
+                <th scope="row">Nazwisko</th>
                 <td>@Html.DisplayFor(model => model.LastName)</td>
             </tr>
             <tr>
@@ -25,19 +23,19 @@
                 <td>@Html.DisplayFor(model => model.PESEL)</td>
             </tr>
             <tr>
-                <th scope="row">Position</th>
+                <th scope="row">Stanowisko</th>
                 <td>@Html.DisplayFor(model => model.Position)</td>
             </tr>
             <tr>
-                <th scope="row">Department</th>
+                <th scope="row">Oddział</th>
                 <td>@Html.DisplayFor(model => model.Department)</td>
             </tr>
             <tr>
-                <th scope="row">Hire Date</th>
+                <th scope="row">Data zatrudnienia</th>
                 <td>@Html.DisplayFor(model => model.HireDate)</td>
             </tr>
             <tr>
-                <th scope="row">Termination Date</th>
+                <th scope="row">Data zakończenia pracy</th>
                 <td>@Html.DisplayFor(model => model.TerminationDate)</td>
             </tr>
         </tbody>
