--- a/Lab1/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Lab1/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Rejestracja";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -9,61 +9,63 @@
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2>Utwórz nowe konto.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
+                <label asp-for="Input.Email">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <input asp-for="Input.FirstName" class="form-control" />
-                <label asp-for="Input.FirstName"></label>
+                <label asp-for="Input.FirstName">Imię</label>
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
             </div>
 
             <div class="form-floating">
                 <input asp-for="Input.LastName" class="form-control" />
-                <label asp-for="Input.LastName"></label>
+                <label asp-for="Input.LastName">Nazwisko</label>
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
 
             <div class="form-floating">
                 <input asp-for="Input.CompanyName" class="form-control" />
-                <label asp-for="Input.CompanyName"></label>
+                <label asp-for="Input.CompanyName">Nazwa firmy</label>
                 <span asp-validation-for="Input.CompanyName" class="text-danger"></span>
             </div>
 
             <div class="form-floating">
                 <input asp-for="Input.NIP" class="form-control" />
-                <label asp-for="Input.NIP"></label>
+                <label asp-for="Input.NIP">NIP</label>
                 <span asp-validation-for="Input.NIP" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
+                <label asp-for="Input.Password">Hasło</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
+                <label asp-for="Input.ConfirmPassword">Potwierdź hasło</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Zarejestruj się</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h3>Use another service to register.</h3>
+            <h3>Zarejestruj się za pomocą innego serwisu.</h3>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
                     <div>
                         <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
+                            Nie skonfigurowano żadnych zewnętrznych usług uwierzytelniania. Zobacz ten <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                artykuł
+                                o konfiguracji tej aplikacji ASP.NET do logowania za pomocą zewnętrznych usług
+                            </a>.
                         </p>
                     </div>
                 }
@@ -74,7 +76,7 @@
                             <p>
                                 @foreach (var provider in Model.ExternalLogins!)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Zaloguj się za pomocą konta @provider.DisplayName">@provider.DisplayName</button>
                                 }
                             </p>
                         </div>
