--- a/Lab1/Views/Employee/ConfirmDelete.cshtml
+++ b/Lab1/Views/Employee/ConfirmDelete.cshtml
@@ -1,23 +1,21 @@
 ﻿@model Employee_App.Models.Employee.EmployeeModel
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
 @{
 }
-<h2>Delete Employee</h2>
+<h2>Usuń Pracownika</h2>
 
-<p>Are you sure you want to delete this employee?</p>
+<p>Czy na pewno chcesz usunąć tego pracownika?</p>
 
 <div>
     <hr />
     <table class="table table-bordered">
         <tbody>
             <tr>
-                <th scope="row">First Name</th>
+                <th scope="row">Imię</th>
                 <td>@Html.DisplayFor(model => model.FirstName)</td>
             </tr>
             <tr>
-                <th scope="row">Last Name</th>
+                <th scope="row">Nazwisko</th>
                 <td>@Html.DisplayFor(model => model.LastName)</td>
             </tr>
             <tr>
@@ -25,26 +23,26 @@
                 <td>@Html.DisplayFor(model => model.PESEL)</td>
             </tr>
             <tr>
-                <th scope="row">Position</th>
+                <th scope="row">Stanowisko</th>
                 <td>@Html.DisplayFor(model => model.Position)</td>
             </tr>
             <tr>
-                <th scope="row">Department</th>
+                <th scope="row">Dział</th>
                 <td>@Html.DisplayFor(model => model.Department)</td>
             </tr>
             <tr>
-                <th scope="row">Hire Date</th>
+                <th scope="row">Data Zatrudnienia</th>
                 <td>@Html.DisplayFor(model => model.HireDate)</td>
             </tr>
             <tr>
-                <th scope="row">Termination Date</th>
+                <th scope="row">Data Zakończenia</th>
                 <td>@Html.DisplayFor(model => model.TerminationDate)</td>
             </tr>
         </tbody>
     </table>
 
     <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Index" class="btn btn-secondary">Back</a>
+        <input type="submit" value="Usuń" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
     </form>
 </div>
