--- a/Lab1/Views/Employee/Index.cshtml
+++ b/Lab1/Views/Employee/Index.cshtml
@@ -1,22 +1,22 @@
 ﻿@model List<Employee_App.Models.Employee.EmployeeModel>
 
-<h2>Employee List</h2>
+<h2>Lista Pracowników</h2>
 <p>
-    <a asp-action="Create" class="btn btn-primary">Add New Employee</a>
+    <a asp-action="Create" class="btn btn-primary">Dodaj Nowego Pracownika</a>
 </p>
 @if (Model != null && Model.Any())
 {
     <table class="table table-striped table-hover table-bordered">
-        <thead>
+        <thead class="table-dark">
             <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
+                <th>Imię</th>
+                <th>Nazwisko</th>
                 <th>PESEL</th>
-                <th>Position</th>
-                <th>Department</th>
-                <th>Hire Date</th>
-                <th>Termination Date</th>
-                <th>Actions</th>
+                <th>Stanowisko</th>
+                <th>Dział</th>
+                <th>Data Zatrudnienia</th>
+                <th>Data Zakończenia</th>
+                <th>Akcje</th>
             </tr>
         </thead>
         <tbody>
@@ -29,18 +29,18 @@
                     <td>@employee.Position</td>
                     <td>@employee.Department</td>
                     <td>@employee.HireDate.ToShortDateString()</td>
-                    <td>@(employee.TerminationDate?.ToShortDateString() ?? "N/A")</td>
+                    <td>@(employee.TerminationDate?.ToShortDateString() ?? "Brak")</td>
                     <td>
-                        <a asp-action="Details" asp-route-id="@employee.Id" class="btn btn-info">Details</a>
-                        <a asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-warning">Edit</a>
-                        <a asp-action="Delete" asp-route-id="@employee.Id" class="btn btn-danger">Delete</a>
+                        <a asp-action="Details" asp-route-id="@employee.Id" class="btn btn-info">Szczegóły</a>
+                        <a asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-warning">Edytuj</a>
+                        <a asp-action="ConfirmDelete" asp-route-id="@employee.Id" class="btn btn-danger">Usuń</a>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
-    }
-    else
-    {
-        <p>No employees found</p>
+}
+else
+{
+    <p>Brak pracowników</p>
 }
