--- a/Lab1/Views/Employer/Edit.cshtml
+++ b/Lab1/Views/Employer/Edit.cshtml
@@ -2,52 +2,53 @@
 
 <h2>Edytuj Pracodawcę</h2>
 
-<form asp-action="Edit" method="post" class="needs-validation" novalidate>
-    @Html.HiddenFor(model => model.EmployerId)
+<form asp-action="Edit" method="post">
+    <input type="hidden" asp-for="EmployerId" />
 
     <div class="form-group">
-        <label asp-for="FirstName" class="form-label">Imię:</label>
+        <label asp-for="FirstName" class="form-label">Imię</label>
         <input asp-for="FirstName" class="form-control" />
-        <div class="invalid-feedback">Pole "Imię" jest wymagane.</div>
+        <span asp-validation-for="FirstName" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="LastName" class="form-label">Nazwisko:</label>
+        <label asp-for="LastName" class="form-label">Nazwisko</label>
         <input asp-for="LastName" class="form-control" />
-        <div class="invalid-feedback">Pole "Nazwisko" jest wymagane.</div>
+        <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="CompanyName" class="form-label">Nazwa Firmy:</label>
+        <label asp-for="CompanyName" class="form-label">Nazwa Firmy</label>
         <input asp-for="CompanyName" class="form-control" />
-        <div class="invalid-feedback">Pole "Nazwa Firmy" jest wymagane.</div>
+        <span asp-validation-for="CompanyName" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="NIP" class="form-label">NIP:</label>
+        <label asp-for="NIP" class="form-label">NIP</label>
         <input asp-for="NIP" class="form-control" />
-        <div class="invalid-feedback">Podaj prawidłowy NIP.</div>
-    </div>
-
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label asp-for="City" class="form-label">Miasto:</label>
-            <input asp-for="City" class="form-control" />
-            <div class="invalid-feedback">Pole "Miasto" jest wymagane.</div>
-        </div>
-
-        <div class="form-group col-md-4">
-            <label asp-for="PostalCode" class="form-label">Kod pocztowy:</label>
-            <input asp-for="PostalCode" class="form-control" />
-            <div class="invalid-feedback">Podaj prawidłowy kod pocztowy.</div>
-        </div>
+        <span asp-validation-for="NIP" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Street" class="form-label">Ulica:</label>
-        <input asp-for="Street" class="form-control" />
-        <div class="invalid-feedback">Pole "Ulica" jest wymagane.</div>
+        <label asp-for="City" class="form-label">Miasto</label>
+        <input asp-for="City" class="form-control" />
+        <span asp-validation-for="City" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Zapisz zmiany</button>
+    <div class="form-group">
+        <label asp-for="Street" class="form-label">Ulica</label>
+        <input asp-for="Street" class="form-control" />
+        <span asp-validation-for="Street" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="PostalCode" class="form-label">Kod pocztowy</label>
+        <input asp-for="PostalCode" class="form-control" />
+        <span asp-validation-for="PostalCode" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Zapisz zmiany</button>
+        <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
+    </div>
 </form>
