--- a/Lab1/Views/Shared/_Layout.cshtml
+++ b/Lab1/Views/Shared/_Layout.cshtml
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Employee_App.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Employee_App</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Portal Pracy</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,10 +28,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Pracownicy</a>
-
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Employer" asp-action="Create">Dodaj Pracodawcę</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Employer" asp-action="Index">Pracodawcy</a>
                         <li class="nav-item">
